[workspace.package]
version = "0.2.6"
edition = "2021"

[package]
name = "sg"
version.workspace = true
edition.workspace = true
repository = "https://github.com/sourcegraph/sg.nvim"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
graphql_client.workspace = true
reqwest.workspace = true
lsp-types.workspace = true

regex = "1.9.1"
futures = "0.3.28"
lsp-server = "0.7.2"
log4rs = "1.2"
log = "0.4"
once_cell = "1"

sg-gql = { path  = "crates/sg-gql" }
sg-types = { path  = "crates/sg-types" }
jsonrpc = { path = "crates/jsonrpc" }
gix = "0.52.0"

[workspace.dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }

serde = "1.0.180"
serde_json = "1.0"

graphql_client = { version = "0.13.0", features = ["reqwest", "reqwest-blocking"] }
reqwest = { version = "0.11", features = ["native-tls-vendored"] }
openssl = { version = "0.10", features = ["vendored"] }

lsp-types = "0.94.0"
url = "2.4.0"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.3.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "plan"
allow-dirty = ["ci"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[lib]
name = "sg"

[workspace]
resolver = "2"
members = [
    "crates/jsonrpc",
    "crates/sg-gql",
    "crates/sg-types",
]
