[workspace.package]
version = "1.1.0"
edition = "2021"

[package]
name = "sg"
version.workspace = true
edition.workspace = true
repository = "https://github.com/sourcegraph/sg.nvim"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
graphql_client.workspace = true
reqwest.workspace = true
lsp-types.workspace = true

regex = "1.11.0"
futures = "0.3.31"
lsp-server = "0.7.7"
log4rs = "1.3.0"
log = "0.4.22"
once_cell = "1.20.1"

sg-gql = { path  = "crates/sg-gql" }
sg-types = { path  = "crates/sg-types" }
jsonrpc = { path = "crates/jsonrpc" }
gix = "0.66.0"
tiny_http = "0.12.0"
keyring = "3.3.0"
whoami = "1.5.2"

[workspace.dependencies]
anyhow = "1.0.89"
tokio = { version = "1.40.0", features = ["full"] }
openssl = { version = "0.10.66", features = ["vendored"] }

serde = "1.0.210"
serde_json = "1.0.128"

graphql_client = { version = "0.14.0", features = ["reqwest", "reqwest-blocking"] }
reqwest = { version = "0.12.8", features = ["native-tls-vendored"] }

lsp-types = "0.97.0"
url = "2.5.2"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.5.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-unknown-linux-gnu", "x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Skip checking whether the specified configuration files are up to date
allow-dirty = ["ci"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[lib]
name = "sg"

[workspace]
resolver = "2"
members = [
    "crates/jsonrpc",
    "crates/sg-gql",
    "crates/sg-types",
]
