[package]
name = "sg-nvim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
sg = { path = "../" }
mlua = { version = "0.6", features = ["luajit", "vendored", "module", "serialize", "async"] }
tokio = { version = "1", features = ["full"] }
reqwest = "0.11.3"
serde = "1.0.125"
futures = "0.3"
once_cell = "1.7.2"
interprocess = { version = "1.1.1", features = ["nonblocking"] }
rmp = "0.8.10"
rmpv = "0.4.7"
