[package]
name = "sg_nvim"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "libsg_nvim.rs"
crate-type = ["cdylib"]

[dependencies]
sg = { path = "../../" }

mlua.workspace = true
tokio.workspace = true

reqwest = "0.11.3"
serde = "1.0.125"
once_cell = "1.7.2"
