[package]
name = "sg_nvim"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "libsg_nvim.rs"
crate-type = ["cdylib"]

[dependencies]
sg = { path = "../../" }

mlua.workspace = true
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
