[package]
name = "sg-nvim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
sg = { path = "../../" }

mlua.workspace = true
tokio.workspace = true
rmp.workspace = true
rmpv.workspace = true

reqwest = "0.11.3"
serde = "1.0.125"
futures = "0.3"
once_cell = "1.7.2"
interprocess = { version = "1.1.1", features = ["nonblocking"] }
